--- a/.github/ci.yaml
+++ b/.github/ci.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: '22'
 
       - name: Install dependencies
         run: pnpm install
@@ -42,7 +42,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: vite-build
-          path: dist  # ← ビルド成果物のパス（プロジェクトに合わせて調整）
+          path: dist
 
       - name: Create PR comment body
         if: github.event_name == 'pull_request'
